Revision history for Perl extension XML::RSS

1.11
       - Minor doc fix (David Steinbrunner)
       - Fix encoding of the > char, added tests (RT#19420, Shlomi Fish)

1.10 - March 11, 2006
       - Module (for now) maintained by Ask Bjoern Hansen
       - Fixed category output in RSS 2.0 (RT#17303, Yasuhiro Onishi)
       - Update documentation with new Subversion server and bug tracking
       - Clean up distribution (tests, Makefile.PL, file locations, ...)

1.05 - Thu Aug 12 20:54:31 2004
       - fixed version number
       - improved RSS 2.0 generation support
       - typo and documentation fixes
    
1.04 - Web Mar 03 20:49:43 2004
       - update Changes to include changes for 1.03
       
1.03 - Web Mar 03 00:24:07 2004
       - quell warnings when parsing RSS 0.9x, RSS 2.0
   
1.02 - Mon Feb 20 15:34:21 2003
       - fixed bug in encode().  encode() did not respect CDATA
         sections and would mangle them when encountered.  now behaves
         properly (we hope) even when CDATA and #PCDATA are mixed
         together liberally

1.01 - Mon Feb  3 15:46:25 2003
    * fixed bug with handle_char().  i (brian d foy) mis-diagnosed a
    previous bug and broke handle_char() when what I should have done
    was initialise the object for each call to parse*()

    * if you have version 1.0, you should upgrade to this version, 1.01

1.00 - Fri Jan 31 11:26:41 2003
    * the as_string method now encodes special characters. valid output!
    * a new "Auto Add" feature can add modules for namespaces found
    while parsing (off by default)
    * can output RSS 2.0, but not parse it yet
    * this is the last major release in this track.  we are going to
    completely rewrite XML::RSS as something more extendable.

0.98_05 - Mon Jan 27 15:54:32 2003
    * The auto add_feature is not controlled by the $AUTO_ADD variable
    and is off by default
    * removed the distribution tests now that it is ready to distribute

0.98_04 - Fri Jan 17 20:00:29 2003